syntax = "proto3";
option go_package = "example";

package example;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
/**
tambahan
*/
import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  string foo = 50001;
}

service Simple {
    rpc HelloWorld(google.protobuf.Empty) returns(HelloWorldMessage) {
        option (google.api.http) = {
            get: "/v1/example/echo"
        };
    }
}

message HelloWorldMessage {
    string name = 1;
    string message = 2;
    option (foo) = "bar";
}